     especially to acquisition wrappers.

     N.B:  ExtensionClassType already declares that it supports GC
     (via the Py_TPFLAGS_HAVE_GC flag), but does not appear to conform
     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Zope 2.10.0 beta 2 (unreleased)

    Bugs Fixed

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

      - Collector #2136: Map ResourceLockedError to the correct response code.

      - Collector #2016: DemoStorage couldn't wrap base storages without
                         an '_oid' attribute.

      - Collector #2118: Empty TALES path expressions are allowed
        in Zope 2.

      - Acquisition wrappers now correctly proxy __contains__.

      - Collector #2116: sequence.sort() did not work properly
        locale related comparison methods

      - Collector #2122: fixed missing is_proxying_match definition
        in ZServer/HTTPServer

      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot

      - Collector #2073: fixed misbehaviour of OFS.Owned.changeOwnership

      - Collector #2063: cleaned up some mess in MailHost.sendTemplate()

      - View and attribute lookup order was changed to the following:
           1. Unacquired attributes
           2. Views
           3. Acquired attributes
        According to consensus in z3-five mailing list:
        http://codespeak.net/pipermail/z3-five/2006q2/001474.html
        
      - The defaultView directive now only looks up views, not attributes.

  Zope 2.10.0 beta 1 (2006/05/30)

    Restructuring

      - Zope 2.10+ now includes site.zcml as part of its instance 
        creation skel directory.  As a consequence Five now requires 
        this file to exist in every instance.  If upgrading a site 